--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+
+    <!--Materialize-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+
+    <title>Event-Board</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
